Implement Phases 15 & 16: AI, Connectivity, Dashboard, and Code Polish
Features included:

- Vision: CameraSensor structure (stubbed)

- Arm: InverseKinematics and RoboticArm

- MQTT: Paho bridge implementation

- SLAM: FastSLAM and Particle Filters

- Dashboard: WebSocket server and Web UI

- Docs: Updated ROADMAP and cleanup